--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,17 +1,8 @@
 ---
-title: Katie Soldau
+homepage: true
 ---
+
 <div class="page">
-  <nav class="nav">
-    <ul class="nav__list">
-      <li class="nav__item">
-        <a class="nav__link" href="./resume.pdf">Resume</a>
-      </li>
-      <li class="nav__item">
-        <a class="nav__link" href="./about.html">About</a>
-      </li>
-    </ul>
-  </nav>
   <div class="hero">
     <h1 class="hero__name">Katie Soldau</h1>
     <p class="hero__desc">I’m a web developer blah blah blah I like to do some things but also I don’t. This should probably be about three lines I guess. More words more words more words.</p>
