--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,7 +7,8 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
     <title><%= current_page.data.title || "Katie Soldau" %></title>
-    <description></description>
+    <meta name="description" content="Katie Soldau's portfolio site.">
+    <meta name="keywords" content="katie, soldau, web, development, front-end, design, interactive media">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
