homepage and details page work

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -1,6 +1,9 @@
 @import 'global/normalize';
 @import 'global/reset';
+@import 'global/variables';
 @import 'global/global';
+@import 'global/typography';
 
 @import 'pages/home';
+@import 'pages/work';
 
