--- a/source/stylesheets/global/_global.scss
+++ b/source/stylesheets/global/_global.scss
@@ -1,28 +1,9 @@
-$footer_height: 40px;
-
-$black: #000000;
-$white: #ffffff;
-$highlight: tomato;
-
-$matisia: #0A6378;
-$human_ventures: #434241;
-$transforming_medicine: #506E2D;
-
-$max_xs: 800px;
-$min_sm: 801px;
-$max_sm: 939px;
-$min_md: 940px;
-$max_md: 1199px;
-$min_lg: 1200px;
-
-
 * {
   margin: 0;
   box-sizing: border-box;
 }
 html, body {
   height: 100%;
-  font-family: 'Lato', sans-serif;
   font-weight: 400;
 }
 .page {
@@ -49,11 +30,12 @@ html, body {
 
 .nav {
   font-size: 14px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 .nav__name {
   float: left;
-  font-family: "Oswald", sans-serif;
-  letter-spacing: 4px;
+  letter-spacing: 0.6px;
   font-size: 24px;
   text-decoration: none;
   color: $highlight;
@@ -61,7 +43,6 @@ html, body {
 .nav__list {
   list-style: none;
   margin: 0;
-  padding: 4px 0 0 0;
   text-align: right;
 }
 .nav__item {
