--- a/source/stylesheets/global/_variables.scss
+++ b/source/stylesheets/global/_variables.scss
@@ -2,11 +2,7 @@ $footer_height: 40px;
 
 $black: #000000;
 $white: #ffffff;
-$highlight: tomato;
-
-$matisia: #0A6378;
-$human_ventures: #434241;
-$transforming_medicine: #506E2D;
+$highlight: #F06543;
 
 $max_xs: 800px;
 $min_sm: 801px;
