--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,35 +7,38 @@ homepage: true
   <p class="hero__desc">I’m a web developer blah blah blah I like to do some things but also I don’t. This should probably be about three lines I guess. More words more words more words.</p>
 </div>
 <div class="projects">
+<h2 class="projects__header">Recent Work</h2>
+<ul class="projects__list">
   <%= partial(:"partials/project-tile", :locals => {
     :name => "Matisia",
     :role => "Front-end development",
-    :img_url => "http://placehold.it/350x350",
-    :details_url => "/details/matisia.html"
+    :img_url => "../images/matisia-tile-6.png",
+    :details_url => "/work/matisia.html"
   }) %>
   <%= partial(:"partials/project-tile", :locals => {
     :name => "Human Ventures",
     :role => "Front-end development",
-    :img_url => "http://placehold.it/350x350",
-    :details_url => "/details/human-ventures.html"
+    :img_url => "../images/hv-tile.png",
+    :details_url => "/work/human-ventures.html"
   }) %>
   <%= partial(:"partials/project-tile", :locals => {
     :name => "Transforming Medicine",
     :role => "Front-end development",
-    :img_url => "http://placehold.it/350x350",
-    :details_url => "/details/transforming-medicine.html"
+    :img_url => "../images/tm-tile.png",
+    :details_url => "/work/transforming-medicine.html"
   }) %>
   <%= partial(:"partials/project-tile", :locals => {
     :name => "Wellthy",
     :role => "Front-end development",
-    :img_url => "http://placehold.it/350x350",
-    :details_url => "/details/wellthy.html"
+    :img_url => "../images/wellthy-tile.png",
+    :details_url => "/work/wellthy.html"
   }) %>
   <%= partial(:"partials/project-tile", :locals => {
     :name => "Ronik Awards Page",
     :role => "Design and front-end development",
-    :img_url => "http://placehold.it/350x350",
-    :details_url => "/details/ronik-awards.html"
+    :img_url => "../images/ra-tile.png",
+    :details_url => "/work/ronik-awards.html"
   }) %>
+  </ul>
   <div class="clear"></div>
 </div>
