--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,800,700,900,600,500,300,200,100' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "normalize", "all" %>
 
     <%= javascript_include_tag  "all" %>
@@ -27,6 +28,9 @@
         <a class="nav__name" href="/">Katie Soldau</a>
         <% end %>
         <ul class="nav__list">
+          <% if !current_page.data.homepage? %>
+            <a class="nav__link" href="/">Work</a>
+          <% end %>
           <li class="nav__item">
             <a class="nav__link" href="./resume.pdf">Resume</a>
           </li>
