--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ homepage: true
 
 <div class="hero">
   <h1 class="hero__name">Katie Soldau</h1>
-  <p class="hero__desc">I’m a web developer blah blah blah I like to do some things but also I don’t. This should probably be about three lines I guess. More words more words more words.</p>
+  <p class="hero__desc">Hi! I'm a web developer with an interest in design, UI/UX, and development. In May 2016, I will graduate with a combined degree in Computer Science and Interactive Media.</p>
 </div>
 <div class="projects">
 <h2 class="projects__header">Recent Work</h2>
@@ -35,10 +35,11 @@ homepage: true
   }) %>
   <%= partial(:"partials/project-tile", :locals => {
     :name => "Ronik Awards Page",
-    :role => "Design and front-end development",
+    :role => "Design & front-end development",
     :img_url => "../images/ra-tile.png",
     :details_url => "/work/ronik-awards.html"
   }) %>
+
   </ul>
   <div class="clear"></div>
 </div>
