--- a/source/stylesheets/global/_global.scss
+++ b/source/stylesheets/global/_global.scss
@@ -15,13 +15,13 @@ html, body {
   width: 100%;
   max-width: 1000px;
   @media (min-width: $min_lg) {
-    padding: 30px 40px 40px 40px;
+    padding: 30px 40px $footer_height 40px;
   }
   @media (min-width: $min_sm) and (max-width: $max_md) {
-    padding: 30px 5% 40px 5%;
+    padding: 30px 5% $footer_height 5%;
   }
   @media (max-width: $max_xs) {
-    padding: 20px 5% 30px 5%;
+    padding: 20px 5% $footer_height 5%;
   }
 }
 .clear {
@@ -62,6 +62,7 @@ html, body {
 
 .footer {
   position: absolute;
+  padding-top: 20px;
   font-size: 12px;
   text-align: right;
   bottom: 0;
