--- a/source/stylesheets/global/_global.scss
+++ b/source/stylesheets/global/_global.scss
@@ -35,15 +35,25 @@ html, body {
   overflow: hidden;
 }
 .nav__name {
-  float: left;
   letter-spacing: 0.6px;
   font-size: 24px;
   text-decoration: none;
+  @media (max-width: 412px) {
+    text-align: center;
+    display: block;
+    margin-bottom: 12px;
+  }
+  @media (min-width: 413px) {
+    float: left;
+  }
 }
 .nav__list {
   list-style: none;
-  margin: 0;
+  margin-top: 1px;
   text-align: right;
+  @media (max-width: 412px) {
+    text-align: center;
+  }
 }
 .nav__item {
   display: inline-block;
