--- a/source/work/matisia.html.erb
+++ b/source/work/matisia.html.erb
@@ -4,20 +4,28 @@
     :date => "April 2015",
     :live_link => "http://www.matisia.com",
     :live_link_name => "www.matisia.com",
-    :summary => "Front-end development of Matisia Consultants marketing site during my web developer co-op at <a href='http://www.ronikdesign.com/'>Ronik</a> in April 2015. A general overview of the process la la la la la. We gave the client the ability to change a variety of aspects of the site so the live site may look different than from when blah blah blah we handed it off to them and when words words.",
     :content => [
       {
         type: "copy",
-        copy: "Front-end development of Matisia Consultants marketing site during my web developer co-op at <a href='http://www.ronikdesign.com/'>Ronik</a> in April 2015. A general overview of the process la la la la la. We gave the client the ability to change a variety of aspects of the site so the live site may look different than from when I handed it off to them and when words words."
+        copy: "I built a marketing website for Matisia while on co-op at <a href='http://www.ronikdesign.com'>Ronik</a>. Matisia is a consulting company that aims to improve companies' business strategy and organization. The designers at Ronik designed the site and then gave the PSDs to myself and another developer. We then developed the front-end of the site. The site had both a fixed-width desktop and mobile version. It is a single page with seven sections."
+      },
+      {
+        type: "copy",
+        copy: "We set up a CMS on <a href='http://www.webhook.com/'>Webhook</a>, used <a href='https://github.com/ronik-design/slush-stencil'>Slush Stencil</a> to scaffold the site, templated in <a href='http://paularmstrong.github.io/swig/'>Swig</a>, and styled in <a href='https://learnboost.github.io/stylus/'>Stylus</a>."
       },
       {
         type: "image",
-        url: "http://placehold.it/350x350",
-        comment: "Placeholder comment"
+        url: "../images/matisia-home-desktop.png",
+        comment: "screenshot of the homepage on desktop"
       },
       {
         type: "image",
-        url: "http://placehold.it/350x500",
-        comment: "Placeholder comment"
-      }]
+        url: "../images/matisia-home-mobile.png",
+        comment: "screenshot of the m homepage on mobile"
+      },
+      {
+        type: "copy",
+        copy: "One challenge we encountered while building the site was the <a href='http://www.matisia.com/#consultants'>Our Consultants</a> section. It needed to be able to showcase a variable amount of videos in a repeating pattern. The solution required us to get creative with the Swig templates."
+      }
+    ]
   }) %>
