--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -2,7 +2,7 @@
 </div>
 <div class="bio">
   <p class="copy">
-    My name is Katie Soldau and I am a student at Northeastern in my last year of pursuing a combined degree in Computer Science and Interactive Media. Right now I am working with a team of designers and developers at <a href="http://northeastern.edu/scout">Scout</a>, a student-run studio at Northeastern's College of Arts Media and Design. I have a lot of experience in web development, but am interested in all aspects of design, UI/UX, and development.
+    Hi there! My name is Katie Soldau and I will graduate in May 2016 with a combined degree in Computer Science and Interactive Media from Northeastern University. Right now I am working with a team of designers and developers at <a href="http://northeastern.edu/scout">Scout</a>, a student-run studio at Northeastern's College of Arts Media and Design. I am interested in all aspects of design, UI/UX, and development.
   </p>
   <p class="copy">
     I am currently looking for an internship for Spring 2016. Also, I am in the (stressful and exciting) process of trying to figure out where I want to apply to work after graduation.
