--- a/source/stylesheets/global/_typography.scss
+++ b/source/stylesheets/global/_typography.scss
@@ -40,3 +40,16 @@ h2 {
     letter-spacing: 0.4px;
   }
 }
+
+h3 {
+  font-weight: 600;
+  @media (max-width: $max_xs) {
+    font-size: 18px;
+  }
+  @media (min-width: $min_sm) and (max-width: $max_sm) {
+    font-size: 20px;
+  }
+  @media (min-width: $min_md) {
+    font-size: 18px;
+  }
+}
