--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -1,17 +1,36 @@
 .headshot {
-  float: left;
-  margin-top: 125px;
-  width: 340px;
-  height: 340px;
   background-size: contain;
   border-radius: 50%;
   background-image: (url("/images/pineapple.jpg"));
+  @media (max-width: $max-xs) {
+    width: 300px;
+    height: 300px;
+    margin: 80px auto 0 auto;
+    margin-bottom: 30px;
+  }
+  @media (min-width: $min-sm) and (max-width: $max-sm) {
+    margin-top: 90px;
+    float: left;
+    width: 300px;
+    height: 300px;
+  }
+  @media (min-width: $min-md) {
+    margin-top: 90px;
+    float: left;
+    width: 340px;
+    height: 340px;
+  }
 }
 .bio {
-  width: calc(100% - 410px);
-  margin-left: 70px;
-  float: left;
-  margin-top: 125px;
+  @media (max-width: $max-xs) {
+    width: 100%;
+  }
+  @media (min-width: $min-sm) {
+    float: left;
+    width: calc(100% - 410px);
+    margin-left: 70px;
+    margin-top: 90px;
+  }
 }
 .contact {
   margin-top: 20px;
