--- a/source/stylesheets/pages/_work.scss
+++ b/source/stylesheets/pages/_work.scss
@@ -21,23 +21,43 @@
   }
 }
 .proj-content {
-  > * {
-    padding: 20px 0px;
+  .proj-image-wrap {
+    padding: 20px 0 20px 0;
+  }
+  h3 {
+    padding: 0 0 10px 0;
   }
 }
 .proj-content .copy {
-  width: 50%;
+  max-width: 450px;
 }
 .proj-image {
   display: inline-block;
   margin-bottom: 20px;
+  width: 100%;
+
+  img {
+    max-width: 100%;
+    box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
+    border-radius: 3px;
+  }
 }
 .summary {
   margin-top: 50px;
   width: 50%;
 }
 .comment {
-  position: absolute;
+  display: block;
   font-size: 12px;
   margin-top: 3px;
+
+  &:before {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 10px;
+    margin-top: 1px;
+    margin-bottom: 4px;
+    background-color: $black;
+  }
 }
