--- a/source/work/matisia.html.erb
+++ b/source/work/matisia.html.erb
@@ -7,7 +7,7 @@
     :content => [
       {
         type: "copy",
-        copy: "I built a marketing website for Matisia while on co-op at <a href='http://www.ronikdesign.com'>Ronik</a>. Matisia is a consulting company that aims to improve companies' business strategy and organization. The designers at Ronik designed the site and then gave the PSDs to myself and another developer. We then developed the front-end of the site. The site had both a fixed-width desktop and mobile version. It is a single page with seven sections."
+        copy: "While on co-op at <a href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that built a marketing website for Matisia. I was one of two front-end developers. Matisia is a consulting company that aims to helps other companies improve their business strategy and organization. The site had both a fixed-width desktop and mobile version. It is a single page with seven sections."
       },
       {
         type: "copy",
@@ -15,17 +15,26 @@
       },
       {
         type: "image",
-        url: "../images/matisia-home-desktop.png",
+        url: "../images/work/matisia/home-desktop.png",
         comment: "screenshot of the homepage on desktop"
       },
       {
         type: "image",
-        url: "../images/matisia-home-mobile.png",
-        comment: "screenshot of the m homepage on mobile"
+        url: "../images/work/matisia/home-mobile.png",
+        comment: "screenshot of the homepage on mobile"
       },
       {
         type: "copy",
         copy: "One challenge we encountered while building the site was the <a href='http://www.matisia.com/#consultants'>Our Consultants</a> section. It needed to be able to showcase a variable amount of videos in a repeating pattern. The solution required us to get creative with the Swig templates."
-      }
-    ]
+      },
+      {
+        type: "image",
+        url: "../images/work/matisia/consultants.png",
+        comment: "screenshot of the desktop consultants page"
+      },
+    ],
+    :after => {
+      url: "../work/human-ventures.html",
+      title: "Human Ventures"
+    }
   }) %>
