--- a/source/stylesheets/pages/_work.scss
+++ b/source/stylesheets/pages/_work.scss
@@ -1,26 +1,34 @@
 .proj-name {
-  margin-top: 140px;
+  @media (max-width: $max_xs) {
+    margin-top: 80px;
+  }
+  @media (min-width: $min_sm) {
+    margin-top: 140px;
+  }
 }
 .proj-details {
   margin-top: 12px;
   margin-bottom: 60px;
 }
 .proj-detail {
-  display: inline-block;
   font-size: 14px;
-
-  &:after {
-    content: "|";
-    display: inline-block;
-    margin: 0 10px;
-  }
-  &:last-child {
+  line-height: 1.6;
+  @media (min-width: $min-sm) {
+  display: inline-block;
     &:after {
-      content: "";
+      content: "|";
+      display: inline-block;
+      margin: 0 10px;
+    }
+    &:last-child {
+      &:after {
+        content: "";
+      }
     }
   }
 }
 .proj-content {
+  margin-bottom: 160px;
   .proj-image-wrap {
     padding: 20px 0 20px 0;
   }
@@ -38,7 +46,7 @@
 
   img {
     max-width: 100%;
-    box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
     border-radius: 3px;
   }
 }
@@ -60,4 +68,30 @@
     margin-bottom: 4px;
     background-color: $black;
   }
+}
+.next {
+  display: inline-block;
+  position: absolute;
+  right: 5%;
+  bottom: 18px;
+  > * {
+    display: inline-block;
+  }
+}
+.next__header {
+  font-size: 16px;
+}
+.next__link {
+  margin-top: 8px;
+  font-size: 12px;
+  width: 100%;
+  display: inline-block;
+}
+.next__next {
+  > * {
+    text-align: right;
+  }
+}
+.next__prev {
+  margin-left: 20px;
 }
