--- a/source/stylesheets/pages/_work.scss
+++ b/source/stylesheets/pages/_work.scss
@@ -27,6 +27,9 @@
     }
   }
 }
+.proj-header {
+  margin-top: 40px;
+}
 .proj-content {
   margin-bottom: 160px;
   .proj-image-wrap {
@@ -46,7 +49,7 @@
 
   img {
     max-width: 100%;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+    //box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
     border-radius: 3px;
   }
 }
