--- a/source/partials/_project-tile.erb
+++ b/source/partials/_project-tile.erb
@@ -1,4 +1,4 @@
-<li>
+<li class="projects__item">
     <a class="project" href="<%= details_url %>">
     <div class="project__img-wrapper">
       <img class="project__img"  src="<%= img_url %>">
