--- a/source/work/human-ventures.html.erb
+++ b/source/work/human-ventures.html.erb
@@ -15,11 +15,13 @@
       },
       {
         type: "image",
+        size: "desktop",
         url: "../images/work/hv/hero-desktop.png",
         comment: "screenshot of the homepage on desktop"
       },
       {
         type: "image",
+        size: "mobile",
         url: "../images/work/hv/hero-mobile.png",
         comment: "screenshot of the homepage on mobile"
       },
@@ -30,6 +32,7 @@
       },
       {
         type: "image",
+        size: "desktop",
         url: "../images/work/hv/button.gif",
         comment: "screen capture of the call-to-action button"
       }
