--- a/source/stylesheets/global/_global.scss
+++ b/source/stylesheets/global/_global.scss
@@ -38,12 +38,12 @@ html, body {
   letter-spacing: 0.6px;
   font-size: 24px;
   text-decoration: none;
-  @media (max-width: $max_xs) {
+  @media (max-width: 412px) {
     text-align: center;
     display: block;
     margin-bottom: 12px;
   }
-  @media (min-width: $min_sm) {
+  @media (min-width: 413px) {
     float: left;
   }
 }
