--- a/source/stylesheets/pages/_work.scss
+++ b/source/stylesheets/pages/_work.scss
@@ -49,9 +49,18 @@
 
   img {
     max-width: 100%;
-    //box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
     border-radius: 3px;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
   }
+}
+.desktop img {
+  width: 1600px;
+}
+.mobile img {
+  width: 320px;
+}
+.tablet img {
+  width: 700px;
 }
 .summary {
   margin-top: 50px;
@@ -60,7 +69,8 @@
 .comment {
   display: block;
   font-size: 12px;
-  margin-top: 3px;
+  margin-top: 8px;
+  font-weight: 600;
 
   &:before {
     content: '';
@@ -73,12 +83,17 @@
   }
 }
 .next {
-  display: inline-block;
-  position: absolute;
-  right: 5%;
-  bottom: 18px;
   > * {
     display: inline-block;
+  }
+  @media (max-width: $max-xs) {
+    margin: 0 auto;
+  }
+  @media (min-width: $min-sm) {
+    display: inline-block;
+    position: absolute;
+    right: 5%;
+    bottom: 18px;
   }
 }
 .next__header {
@@ -95,6 +110,15 @@
     text-align: right;
   }
 }
+.next__next,
+.next__prev {
+  @media (max-width: $max-xs) {
+    width: 47%;
+  }
+}
 .next__prev {
   margin-left: 20px;
+  @media (max-width: $max-xs) {
+    float: right;
+  }
 }
