--- a/source/work/matisia.html.erb
+++ b/source/work/matisia.html.erb
@@ -15,11 +15,13 @@
       },
       {
         type: "image",
+        size: "desktop",
         url: "../images/work/matisia/home-desktop.png",
         comment: "screenshot of the homepage on desktop"
       },
       {
         type: "image",
+        size: "desktop",
         url: "../images/work/matisia/home-mobile.png",
         comment: "screenshot of the homepage on mobile"
       },
@@ -29,6 +31,7 @@
       },
       {
         type: "image",
+        size: "consultants",
         url: "../images/work/matisia/consultants.png",
         comment: "screenshot of the desktop consultants page"
       },
