--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -20,13 +20,13 @@ When I'm not working, I enjoy exploring (whether that be a new bookstore or a co
       <a href="mailto:ksoldau@gmail.com"><i class="fa fa-envelope-o"></i>ksoldau@gmail.com</a>
     </li>
     <li>
-      <a href="https://github.com/ksoldau"><i class="fa fa-github-square"></i>GitHub</a>
+      <a target="_blank" href="https://github.com/ksoldau"><i class="fa fa-github-square"></i>GitHub</a>
     </li>
     <li>
-      <a href="https://www.linkedin.com/in/katie-soldau-02902955"><i class="fa fa-linkedin-square"></i>LinkedIn</a>
+      <a target="_blank" href="https://www.linkedin.com/in/katie-soldau-02902955"><i class="fa fa-linkedin-square"></i>LinkedIn</a>
     </li>
     <li>
-      <a href="https://www.instagram.com/katiesoldau"><i class="fa fa-instagram"></i>Instagram</a>
+      <a target="_blank" href="https://www.instagram.com/katiesoldau"><i class="fa fa-instagram"></i>Instagram</a>
     </li>
   </ul>
 
