--- a/source/work/matisia.html.erb
+++ b/source/work/matisia.html.erb
@@ -7,11 +7,11 @@
     :content => [
       {
         type: "copy",
-        copy: "While on co-op at <a href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that built a marketing website for Matisia. I was one of two front-end developers. Matisia is a consulting company that aims to helps other companies improve their business strategy and organization. The site had both a fixed-width desktop and mobile version. It is a single page with seven sections."
+        copy: "While on co-op at <a target='_blank' href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that built a marketing website for Matisia. I was one of two front-end developers. Matisia is a consulting company that aims to helps other companies improve their business strategy and organization. The site had both a fixed-width desktop and mobile version. It is a single page with seven sections."
       },
       {
         type: "copy",
-        copy: "We set up a CMS on <a href='http://www.webhook.com/'>Webhook</a>, used <a href='https://github.com/ronik-design/slush-stencil'>Slush Stencil</a> to scaffold the site, templated in <a href='http://paularmstrong.github.io/swig/'>Swig</a>, and styled in <a href='https://learnboost.github.io/stylus/'>Stylus</a>."
+        copy: "We set up a CMS on <a target='_blank' href='http://www.webhook.com/'>Webhook</a>, used <a target='_blank' href='https://github.com/ronik-design/slush-stencil'>Slush Stencil</a> to scaffold the site, templated in <a target='_blank' href='http://paularmstrong.github.io/swig/'>Swig</a>, and styled in <a target='_blank' href='https://learnboost.github.io/stylus/'>Stylus</a>."
       },
       {
         type: "image",
@@ -27,7 +27,7 @@
       },
       {
         type: "copy",
-        copy: "One challenge we encountered while building the site was the <a href='http://www.matisia.com/#consultants'>Our Consultants</a> section. It needed to be able to showcase a variable amount of videos in a repeating pattern. The solution required us to get creative with the Swig templates."
+        copy: "One challenge we encountered while building the site was the <a target='_blank' href='http://www.matisia.com/#consultants'>Our Consultants</a> section. It needed to be able to showcase a variable amount of videos in a repeating pattern. The solution required us to get creative with the Swig templates."
       },
       {
         type: "image",
