mobile image fixes

--- a/source/work/matisia.html.erb
+++ b/source/work/matisia.html.erb
@@ -21,7 +21,7 @@
       },
       {
         type: "image",
-        size: "desktop",
+        size: "mobile",
         url: "../images/work/matisia/home-mobile.png",
         comment: "screenshot of the homepage on mobile"
       },
