--- a/source/stylesheets/global/_global.scss
+++ b/source/stylesheets/global/_global.scss
@@ -70,6 +70,9 @@ html, body {
   color: #c5c5c5;
   transition: color 0.15s ease-in-out;
 
+  &.active {
+    color: $black;
+  }
   &:hover {
     color: $highlight;
   }
