--- a/source/stylesheets/global/_variables.scss
+++ b/source/stylesheets/global/_variables.scss
@@ -2,7 +2,9 @@ $footer_height: 60px;
 
 $black: #000000;
 $white: #ffffff;
-$highlight: #F06543;
+$highlight: #407B29;
+///#407B29;
+///#76981E;
 
 $max_xs: 800px;
 $min_sm: 801px;
