--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,20 +1,22 @@
 .hero {
   margin-top: 100px;
   @media (max-width: $max_xs) {
-    width: 100%;
+    @include j-column(1);
     margin-top: 70px;
   }
   @media (min-width: $min_sm) and (max-width: $max_md) {
-    width: 60%;
+    @include j-column(7/12);
   }
   @media (min-width: $min_lg) {
-    width: 50%;
+    @include j-column(6/12);
   }
 }
 .hero__name {
   margin-bottom: 10px;
 }
 .projects {
+  @include j-column(1, $gutter: 0);
+
   @media (max-width: $max_xs) {
     margin-top: 100px;
     margin-bottom: 70px;
@@ -25,38 +27,32 @@
   }
 }
 .projects__header {
-  padding-bottom:  5px;
+  @include j-column(1);
+  padding-bottom:  16px;
 }
 .projects__item {
+  margin-bottom: 2%;
+
+  @media (max-width: $max_xs) {
+    @include j-column(1);
+  }
   @media (min-width: $min_sm) and (max-width: $max_sm) {
-    &:nth-child(2n+1) {
-      .project {
-        margin: 12px 12px 12px 0;
-      }
-    }
+    @include j-column(1/2);
     &:nth-child(2n) {
-      .project {
-        margin: 12px 0 12px 12px;
-      }
+      margin-right: 0%;
     }
   }
   @media (min-width: $min-md) {
-    &:nth-child(3n+1) {
-      .project {
-        margin: 12px 12px 12px 0;
-      }
-    }
+    @include j-column(1/3);
     &:nth-child(3n) {
-      .project {
-        margin: 12px 0 12px 12px;
-      }
+      margin-right: 0%;
     }
   }
 }
 .project {
+  float: left;
   position: relative;
   height: auto;
-  float: left;
 
   &:hover {
     .project__overlay {
@@ -65,18 +61,6 @@
     .project__info {
       margin-bottom: 10px;
     }
-  }
-  @media (max-width: $max_xs) {
-    width: 100%;
-    margin: 20px 0;
-  }
-  @media (min-width: $min_sm) and (max-width: $max_sm) {
-    width: calc(50% - 12px);
-    margin: 12px;
-  }
-  @media (min-width: $min-md) {
-    width: calc(33.333% - 16px);
-    margin: 12px;
   }
 }
 .project__img-wrap {
