--- a/source/work/human-ventures.html.erb
+++ b/source/work/human-ventures.html.erb
@@ -7,7 +7,7 @@
     :content => [
       {
         type: "copy",
-        copy: "While on co-op at <a target='_blank' href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that built a responsive landing page for Human Ventures that could excite investors. The text on the landing page was unveiled via elegant scroll animations. Human Ventures is a startup studio that is committed to helping early-stage startups with talent, leadership, and resources. I worked on the front-end of the site with <a  target='_blank' href='http://maxlever.me/'>Max Lever</a>, who was another co-op. The client has the current control over the background image and the content, so the live site may not appear as it did when we first launched it."
+        copy: "While on co-op at <a target='_blank' href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that built a responsive landing page for Human Ventures that could excite investors. The text on the landing page was unveiled via elegant scroll animations. Human Ventures is a startup studio that is committed to helping early-stage startups with talent, leadership, and resources. I worked on the front-end of the site with <a  target='_blank' href='http://maxlever.me/'>Max Lever</a>, who was another co-op. The client has the current control over the background image, content, and colors on the live site."
       },
       {
         type: "copy",
@@ -15,26 +15,27 @@
       },
       {
         type: "image",
-        size: "desktop",
+        columns: 9,
         url: "../images/work/hv/hero-desktop.png",
         comment: "screenshot of the homepage on desktop"
       },
       {
         type: "image",
-        size: "mobile",
+        columns: 3,
+        edge: true,
         url: "../images/work/hv/hero-mobile.png",
         comment: "screenshot of the homepage on mobile"
       },
       {
         type: "copy",
         header: "Scroll Animations",
-        copy: "The landing page had many text animations that happened on scroll. These were done with <a target='_blank' href='http://janpaepke.github.io/ScrollMagic'>ScrollMagic</a>, as previously stated. We set up waypoints that would trigger certain animations, and calculated certain CSS properties based on the progress of the scrollui."
+        copy: "The landing page had many text animations that happened on scroll. These were done with <a target='_blank' href='http://janpaepke.github.io/ScrollMagic'>ScrollMagic</a>, as previously stated. We set up waypoints that would trigger certain animations, and calculated certain CSS properties based on the progress of the scroll."
       },
       {
         type: "image",
-        size: "desktop",
+        columns: 12,
         url: "../images/work/hv/button.gif",
-        comment: "screen capture of the call-to-action button"
+        comment: "screen capture of the call-to-action button scroll animation"
       }
     ],
     :prev => {
