forgot to add jeet in before, misc.

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -6,10 +6,10 @@ page: "about"
 </div>
 <div class="bio">
   <p class="copy">
-    Hi there! My name is Katie Soldau and I will graduate in May 2016 with a combined degree in Computer Science and Interactive Media from Northeastern University. Right now I am working with a team of designers and developers at <a href="http://northeastern.edu/scout">Scout</a>, a student-run studio at Northeastern's College of Arts Media and Design. I am interested in all aspects of design, UI/UX, and development.
+    Hi there! My name is Katie Soldau and I will graduate in May 2016 with a combined degree in Computer Science and Interactive Media from Northeastern University. Right now I am working with a team of designers and developers at <a href="http://northeastern.edu/scout">Scout</a>, a student-run studio at Northeastern's College of Arts Media and Design. I am interested in all aspects of design, UI/UX, and development. However, most of my experience is in development work.
   </p>
   <p class="copy">
-    I am currently looking for an internship for Spring 2016. Also, I am in the (stressful and exciting) process of trying to figure out where I want to apply to work after graduation.
+    I am currently looking for an internship for Spring 2016, and for a post-grad job. Also, I am in the process applying for post-grad work.
   </p>
   <p class="copy">
 When I'm not working, I enjoy exploring (whether that be a new bookstore or a country on a different country), scavenger hunts, geocaching, and interactive theatre.
