--- a/source/work/matisia.html.erb
+++ b/source/work/matisia.html.erb
@@ -15,15 +15,26 @@
       },
       {
         type: "image",
-        size: "desktop",
+        columns: 12,
         url: "../images/work/matisia/home-desktop.png",
         comment: "screenshot of the homepage on desktop"
       },
       {
         type: "image",
-        size: "mobile",
+        columns: 4,
         url: "../images/work/matisia/home-mobile.png",
-        comment: "screenshot of the homepage on mobile"
+        comment: "screenshots of the mobile site"
+      },
+      {
+        type: "image",
+        columns: 4,
+        url: "../images/work/matisia/consultants-mobile.png",
+      },
+      {
+        type: "image",
+        edge: true,
+        columns: 4,
+        url: "../images/work/matisia/news-mobile.png",
       },
       {
         type: "copy",
@@ -31,7 +42,7 @@
       },
       {
         type: "image",
-        size: "consultants",
+        columns: 12,
         url: "../images/work/matisia/consultants.png",
         comment: "screenshot of the desktop consultants page"
       },
