--- a/source/work/ronik-awards.html.erb
+++ b/source/work/ronik-awards.html.erb
@@ -15,19 +15,20 @@
       },
       {
         type: "image",
-        size: "mobile",
+        columns: 4,
         url: "../images/work/ra/mobile.png",
         comment: "screenshot of the page on mobile"
       },
       {
         type: "image",
-        size: "tablet",
+        columns: 8,
+        edge: true,
         url: "../images/work/ra/tablet.png",
         comment: "screenshot of the page on tablet"
       },
       {
         type: "image",
-        size: "desktop",
+        columns: 12,
         url: "../images/work/ra/desktop.png",
         comment: "screenshot of part of the page on desktop"
       }
