--- a/source/work/transforming-medicine.html.erb
+++ b/source/work/transforming-medicine.html.erb
@@ -15,28 +15,23 @@
       },
       {
         type: "image",
-        size: "desktop",
+        columns: 12,
         url: "../images/work/tm/home-desktop.png",
         comment: "screenshot of the homepage on desktop"
       },
       {
         type: "image",
-        size: "mobile",
-        url: "../images/work/tm/home-mobile.png",
-        comment: "screenshot of the homepage on mobile"
-      },
-      {
-        type: "image",
-        size: "tablet",
-        url: "../images/work/tm/mission-tablet.png",
-        comment: "screenshot of the Our Mission page on tablet"
-      },
-      {
-        type: "image",
-        size: "mobile",
+        columns: 4,
         url: "../images/work/tm/story-mobile.png",
         comment: "screenshot of the Our Story page on mobile"
       },
+      {
+        type: "image",
+        columns: 8,
+        edge: true,
+        url: "../images/work/tm/mission-tablet.png",
+        comment: "screenshot of the Our Mission page on tablet"
+      }
     ],
     :prev => {
       url: "../work/wellthy.html",
