add year to footer

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -46,7 +46,7 @@
       <%= yield %>
 
       <div class="clear"></div>
-      <footer class="footer">&#169 Katie Soldau</footer>
+      <footer class="footer">&#169 Katie Soldau, 2015</footer>
 
     </div>
   </body>
