--- a/source/work/matisia.html.erb
+++ b/source/work/matisia.html.erb
@@ -1,4 +1,5 @@
   <%= partial(:"partials/project-entire", :locals => {
+    :key => "matisia",
     :name => "Matisia",
     :role => "Front-end development",
     :date => "April 2015",
