--- a/source/stylesheets/pages/_work.scss
+++ b/source/stylesheets/pages/_work.scss
@@ -105,7 +105,8 @@
   }
 }
 .next__header {
-  font-size: 14px;
+  font-size: 13px;
+  margin-bottom: 8px;
 }
 .next__link {
   margin-top: 8px;
@@ -134,6 +135,6 @@
     padding-left: 10px;
   }
   @media (min-width: $min-sm) {
-    margin-left: 40px;
+    margin-left: 30px;
   }
 }
