--- a/source/work/human-ventures.html.erb
+++ b/source/work/human-ventures.html.erb
@@ -1,4 +1,5 @@
   <%= partial(:"partials/project-entire", :locals => {
+    :key => "human-ventures",
     :name => "Human Ventures",
     :role => "Front-end development",
     :date => "March 2015",
