--- a/source/work/ronik-awards.html.erb
+++ b/source/work/ronik-awards.html.erb
@@ -1,4 +1,5 @@
   <%= partial(:"partials/project-entire", :locals => {
+    :key => "ronik-awards",
     :name => "Ronik Awards",
     :role => "Design & front-end development",
     :date => "May 2015",
