--- a/source/work/transforming-medicine.html.erb
+++ b/source/work/transforming-medicine.html.erb
@@ -1,4 +1,5 @@
   <%= partial(:"partials/project-entire", :locals => {
+    :key => "transforming-medicine",
     :name => "Transforming Medicine",
     :role => "Front-end development",
     :date => "February 2015",
