--- a/source/work/wellthy.html.erb
+++ b/source/work/wellthy.html.erb
@@ -1,4 +1,5 @@
   <%= partial(:"partials/project-entire", :locals => {
+    :key => "wellthy",
     :name => "Wellthy",
     :role => "Front-end development",
     :date => "June 2015",
